--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,11 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+.gallery{
+display: flex;
+justify-content: center;
+
+}
+.list__item{
+  list-style: none;
+}
